- step 4b improved (in case of 1 or more feature of interests, observed properties, unit of measurements, sensor columns) - new step 5c (for incomplete position) - functions for merging date and times and positions - parsing space separated files - step 7 improved (inserting O&M into SOS)